[package]
name = "blizztools"
description = "cli toolset for interacting with blizzard cdn"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "blizztools"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "reqwest", "anyhow", "tokio", "tracing-subscriber"]

[dependencies]
anyhow = { version = "1.0.79", optional = true }
tokio = { version = "1.35.1", features = ["full"], optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
reqwest = { version = "0.11.23", optional = true }
clap = { version = "4.4.18", features = ["derive"], optional = true }

binrw = "0.13.3"
flate2 = { version = "1.0.28", features = ["zlib"] }
hex = "0.4.3"
thiserror = "1.0.56"
tracing = "0.1.40"
